--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - '2303:2303/udp'
       - '2304:2304/udp'
       - '2305:2305/udp'
+      - '2306:2306/udp'
     volumes:
       - './missions:/arma3/mpmissions'
       - './configs:/arma3/configs'
