--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,12 +3,18 @@ name: Docker Image CI
 on: [push, pull_request]
 
 jobs:
-
-  build:
- 
+  docker:
     runs-on: ubuntu-latest
- 
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag arma3server:$(date +%s)
+      run: docker build . --tag arma3server:$(date +%s)
+
+  docker-compose:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Copy .env file
+      run: cp .env.example .env
+    - name: Build the Docker image
+      run: docker-compose build
