Use .env file for docker compose with all variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
-STEAMUSER=id-not-email
-STEAMPASSWORD=password
+ARMA_BINARY=arma3server_x64
+ARMA_CDLC=
+ARMA_CONFIG=main.cfg
+ARMA_LIMITFPS=100
+ARMA_PROFILE=main
+ARMA_WORLD=empty
+HEADLESS_CLIENTS=0
+MODS_LOCAL=true
+MODS_PRESET=
+PORT=2302
+STEAM_BRANCH=public
+STEAM_BRANCH_PASSWORD=
+STEAM_PASSWORD=password
+STEAM_USER=id-not-email
