--- a/.github/workflows/docker_github.yml
+++ b/.github/workflows/docker_github.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Convert repository name to lower case
-      run: echo IMAGE_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+      run: echo IMAGE_REPOSITORY="$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
     - name: Publish to Registry
       uses: docker/build-push-action@v1
       with:
