--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --tag arma3server:$(date +%s)
+      run: docker build . --tag "arma3server:$(date +%s)"
 
   docker-compose:
     runs-on: ubuntu-latest
