Document ARMA_PARAMS environment variable

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ ARMA_CONFIG=main.cfg
 ARMA_LIMITFPS=100
 ARMA_PROFILE=main
 ARMA_WORLD=empty
+ARMA_PARAMS=
 HEADLESS_CLIENTS=0
 MODS_LOCAL=true
 MODS_PRESET=
