--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ ARMA_LIMITFPS=100
 ARMA_PROFILE=main
 ARMA_WORLD=empty
 HEADLESS_CLIENTS=0
-HEADLESS_CLIENTS_PROFILE="$profile-hc-$i" # valid placeholders: $profile, $i
+HEADLESS_CLIENTS_PROFILE="$profile-hc-$i" # valid placeholders: $profile, $i, $ii
 MODS_LOCAL=true
 MODS_PRESET=
 PORT=2302
