--- a/.github/workflows/docker_github.yml
+++ b/.github/workflows/docker_github.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Publish to Registry
       uses: docker/build-push-action@v2
       with:
-        repository: ${{ env.IMAGE_REPOSITORY }}
+        repository: ${{ github.event.repository.name }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
