--- a/.github/workflows/docker_github.yml
+++ b/.github/workflows/docker_github.yml
@@ -15,3 +15,4 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: docker.pkg.github.com
         tag_with_ref: true
+        push: true
