--- a/.github/workflows/docker_github.yml
+++ b/.github/workflows/docker_github.yml
@@ -7,12 +7,20 @@ jobs:
     - uses: actions/checkout@master
     - name: Convert repository name to lower case
       run: echo IMAGE_REPOSITORY="$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
-    - name: Publish to Registry
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1 
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Get smart tag
+      id: prepare
+      uses: Surgo/docker-smart-tag-action@v1
+      with:
+        docker_image: ${{ env.IMAGE_REPOSITORY }}
+    - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        repository: ${{ github.event.repository.name }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: ghcr.io
-        tag_with_ref: true
         push: true
+        tags: |
+          ghcr.io/${{ steps.prepare.outputs.tag }}
