Use GitHub registry in example docker-compose.yml
Close #55

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   arma3:
     build: .
-    image: synixebrett/arma3server
+    image: ghcr.io/brettmayson/arma3server/arma3server:latest
     platform: linux/amd64
     container_name: arma3
     network_mode: host
