Fixed: error message regarding unset variables.
Fixes the errors:
WARN[0000] The "profile" variable is not set. Defaulting to a blank string.
WARN[0000] The "i" variable is not set. Defaulting to a blank string.

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ARMA_PARAMS=
 ARMA_PROFILE=main
 ARMA_WORLD=empty
 HEADLESS_CLIENTS=0
-HEADLESS_CLIENTS_PROFILE="$profile-hc-$i" # valid placeholders: $profile, $i, $ii
+HEADLESS_CLIENTS_PROFILE="\$profile-hc-\$i" # valid placeholders: $profile, $i, $ii
 MODS_LOCAL=true
 MODS_PRESET=
 PORT=2302
